<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Balance</string>
    <string name="action_settings">Settings</string>
    <string name="ip_address">IP Address:</string>
    <string name="port_address">Port:</string>
    <string name="input_ip">192.168.2.2</string>
    <string name="input_port">55810</string>
    <string name="connect">Connect</string>
    <string name="radio_basicweighing">Connect Basic Weighing</string>
    <string name="radio_levelbubble">Connect Leveling Bubble</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_weighing">Weighing</string>
    <string name="title_activity_level_bubble">LevelBubble</string>
    <string name="title_activity_balance_manual">BalanceManual</string>
    <string name="view_manuals">View Manuals</string>
    <string name="open_manual">Open</string>
    <string name="title_activity_download_manual">DownloadManual</string>

</resources>