<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BalanceManual" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <TableRow>
	    <TextView
	        android:id="@+id/manual_1_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ip_address" />		
		<Button
	        android:id="@+id/manual_1_bn"
	        android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	   		android:selectAllOnFocus="true" 
			android:text="@string/open_manual"/>
	 </TableRow>	 


</TableLayout>
